--- a/package.json
+++ b/package.json
@@ -21,18 +21,23 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor-firebase/authentication": "^5.1.0",
+    "@capacitor-firebase/remote-config": "^5.1.0",
     "@capacitor/action-sheet": "^5.0.6",
     "@capacitor/android": "5.2.3",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.3",
     "@capacitor/dialog": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.2.3",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@capacitor/toast": "^5.0.6",
     "@ionic/angular": "^7.0.0",
+    "firebase": "^10.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
