--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor-firebase/analytics": "^5.1.0",
     "@capacitor-firebase/authentication": "^5.1.0",
     "@capacitor-firebase/remote-config": "^5.1.0",
     "@capacitor/action-sheet": "^5.0.6",
@@ -39,6 +41,7 @@
     "@ionic/angular": "^7.0.0",
     "firebase": "^10.1.0",
     "ionicons": "^7.0.0",
+    "node-firestore-import-export": "^1.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
