--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ionicons": "^7.0.0",
     "node-firestore-import-export": "^1.1.0",
     "rxjs": "~7.8.0",
+    "swiper": "^10.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
